--- a/tarefas-tarefosas/css/estilo.css
+++ b/tarefas-tarefosas/css/estilo.css
@@ -1,3 +1,13 @@
 body {
-  background-color:;
+    background-image : url('../imagens/mountain-japanese.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.lista {
+  color: black;
+}
+
+.lista1 {
+  color:  red;
 }
