--- a/tarefas-tarefosas/css/estilo.css
+++ b/tarefas-tarefosas/css/estilo.css
@@ -5,10 +5,84 @@ body {
 }
 
 .lista {
-  color: black;
-  font-size: 18px;
+  margin-bottom: 4px;
+  margin-top: 4px;
+  background: #6c5570;
+  height: 54px;
+  border: none;
+  border-radius: 4px;
+  color: #FFF;
+  padding: 12px;
+
+  display: flex;
+  justify-content: left;
+  align-items: center;
+
+  transition: background 0.4s;
 }
+
+.lista:hover {
+  background: rgb(73, 56, 83);
+}
+
 
 .lista1 {
   color:  red;
 }
+
+
+.form form {
+  display : flex ;
+  justify - content : center ;
+  flex - direction : column ;
+}
+
+.form label {
+  font-weight: bold;
+  font-size: 15px;
+  margin-top: 4px;
+  margin-bottom: 4px;
+
+}
+
+.form input {
+  height: 32px;
+  margin-top: 4px;
+  margin-bottom: 4px;
+  padding-left: 12px;
+  border: 1px solid red; 
+}
+
+form input:focus {
+  background: red;
+}
+
+.separator {
+  background: rgb(20, 58, 22);
+  height: 1px;
+  border-radius: 12px;
+}
+
+.form button {
+  background: #b364a5;
+  height: 32px;
+  border: none;
+  border-radius: 4px;
+  color: #FFF;
+  transition: background 0.4s;
+  }
+
+.form button:hover {
+  background: #da4c6f;
+}
+
+.list-tasks {
+  margin-top: 12px;
+  margin-bottom: 12px;
+
+}
+
+.list-tasks ul {
+  list-style: none;
+}
+
