--- a/tarefas-tarefosas/css/estilo.css
+++ b/tarefas-tarefosas/css/estilo.css
@@ -86,3 +86,27 @@ form input:focus {
   list-style: none;
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+<?php
+session_start();
+
+if ( !isset($_SESSION['tasks']) ) {
+     $_SESSION['tasks'] = array();
+}
+
+if ( isset($_GET['task_name']) ) {
+ unset($_GET['task_name']);
+ 
+ ?>
